--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
   position: relative;
   padding: 50px;
   background: #84c2a7;
+  font-size: 10px;
+  font-weight: normal;
+  font-style: normal;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #c9c9c9;
 }
 .top-picks__header {
   border-left: solid 5px #73BA9B;
